--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ a {
 
 .header {
     display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     justify-content: space-between;
     align-items: center;
     box-sizing: border-box;
@@ -29,6 +31,7 @@ a {
 
 .header-menu {
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
 }
 
@@ -37,4 +40,50 @@ a {
     padding: 16px 0px;
     color: #fff;
     font-size: 1.110rem;
+    position: relative;
+}
+
+.header-menu a:after {
+    content: "";
+    display: block;
+    height: 2px;
+    width: 0px;
+    background: #fff;
+    margin-top: 4px;
+    position: absolute;
+}
+
+.header-menu a:hover:after {
+    width: 100%;
+    transition: 0.3s;
+}
+
+@media (max-width: 800px) {
+    .header-menu {
+        gap: 20px;
+    }
+    .header-menu a {
+        background: #111;
+        padding: 12px 16px;
+        border-radius: 5px;
+    }
+
+    .header-menu a:hover {
+        background-color: #2e2e2e;
+    }
+
+    .header a:after {
+        display:none;
+    }
+}
+
+@media (max-width: 600px) {
+    .header-menu {
+        gap: 12px;
+    }
+
+    .header-menu a {
+        padding: 8px 12px;
+        font-size: 14px;
+    }
 }
