--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,24 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-ul {
+h1, 
+ul,
+p {
     margin: 0px;
+}
+
+ul {
     padding: 0px;
 }
 
 a {
     text-decoration: none;
+    align-self: inherit;
+}
+
+img {
+    max-width: 100%;
+    display: block;
 }
 
 .header-bg {
@@ -86,4 +97,33 @@ a {
         padding: 8px 12px;
         font-size: 14px;
     }
+}
+
+.introducao-bg {
+    background: #000;
+    color: #fff;
+}
+
+.introducao {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0px 40px;
+}
+
+.introducao-conteudo{
+    align-self: end;
+    padding-bottom: 80px;
+}
+
+.introducao h1 {
+    margin-bottom: 32px;
+    font-size: 64px;
+    line-height: 1.125;
+}
+
+.introducao p {
+    margin-bottom: 20px;
+    font-size: 24px;
+    line-height: 1.5;
+    color: #b2b2b2;
 }
