--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,12 @@ img {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0px 40px;
+    box-sizing: border-box;
+    max-width: 1200px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .introducao-conteudo{
@@ -126,4 +132,25 @@ img {
     font-size: 24px;
     line-height: 1.5;
     color: #b2b2b2;
+}
+
+.introducao h1 span {
+    color: #ffb000;
+}
+
+.introducao a {
+    display: inline-block;
+    padding: 16px 32px;
+    background: linear-gradient(#ffb000, #f2a50c);
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.10);
+    text-transform: uppercase;
+    color: #332200;
+    font-size: 18px;
+    line-height: 1.33;
+    font-weight: bold;
+}
+
+.introducao a:hover {
+    background: linear-gradient(#ffb60d, #e59317);
 }
