--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ img {
     color: #fff;
     font-size: 1.110rem;
     position: relative;
+    font-family: 'Poppins';
+    font-weight: 400;
 }
 
 .header-menu a:after {
@@ -133,6 +135,8 @@ img {
     margin-bottom: 32px;
     font-size: 64px;
     line-height: 1.125;
+    font-family: 'Poppins';
+    font-weight: 600;
 }
 
 .introducao p {
@@ -140,6 +144,8 @@ img {
     font-size: 24px;
     line-height: 1.5;
     color: #b2b2b2;
+    font-family: 'Roboto';
+    font-weight: 400;
 }
 
 .introducao h1 span {
@@ -156,7 +162,8 @@ img {
     color: #332200;
     font-size: 18px;
     line-height: 1.33;
-    font-weight: bold;
+    font-family: 'Poppins';
+    font-weight: 600;
 }
 
 .introducao a:hover {
