--- a/css/style.css
+++ b/css/style.css
@@ -1,212 +1,8 @@
-body {
-    margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    height: 2000px;
-}
+@import url(/global/header.css);
+@import url(/global/global.css);
 
-h1, 
-ul,
-p {
-    margin: 0px;
-}
+/* Utilidades */
+@import url(/utilidades/componentes.css);
 
-ul {
-    padding: 0px;
-}
-
-a {
-    text-decoration: none;
-    align-self: inherit;
-}
-
-img {
-    max-width: 100%;
-    display: block;
-}
-
-.header-bg {
-    background-color: #000;
-}
-
-.header {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    padding: 20px;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header-menu {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-}
-
-.header-menu a {
-    display: inline-block;
-    padding: 16px 0px;
-    color: #fff;
-    font-size: 1.110rem;
-    position: relative;
-    font-family: 'Poppins';
-    font-weight: 400;
-}
-
-.header-menu a:after {
-    content: "";
-    display: block;
-    height: 2px;
-    width: 0px;
-    background: #fff;
-    margin-top: 4px;
-    position: absolute;
-}
-
-.header-menu a:hover:after {
-    width: 100%;
-    transition: 0.3s;
-}
-
-@media (max-width: 800px) {
-    .header-menu {
-        gap: 20px;
-    }
-    .header-menu a {
-        background: #111;
-        padding: 12px 16px;
-        border-radius: 5px;
-    }
-
-    .header-menu a:hover {
-        background-color: #2e2e2e;
-    }
-
-    .header a:after {
-        display:none;
-    }
-}
-
-@media (max-width: 600px) {
-    .header-menu {
-        gap: 12px;
-    }
-
-    .header-menu a {
-        padding: 8px 12px;
-        font-size: 14px;
-    }
-}
-
-.introducao-bg {
-    background: #000;
-    color: #fff;
-    box-shadow: inset 0 -20px #fff;
-}
-
-.introducao {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0px 40px;
-    box-sizing: border-box;
-    max-width: 1200px;
-    padding-right: 20px;
-    padding-left: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.introducao-conteudo{
-    align-self: end;
-    padding-bottom: 200px;
-}
-
-.introducao img {
-    height: 100%;
-    object-fit: cover;
-    border-radius: 4px;
-}
-
-.introducao h1 {
-    margin-bottom: 32px;
-    font-size: 64px;
-    line-height: 1.125;
-    font-family: 'Poppins';
-    font-weight: 600;
-}
-
-.introducao p {
-    margin-bottom: 20px;
-    font-size: 24px;
-    line-height: 1.5;
-    color: #b2b2b2;
-    font-family: 'Roboto';
-    font-weight: 400;
-}
-
-.introducao h1 span {
-    color: #ffb000;
-}
-
-.introducao a {
-    display: inline-block;
-    padding: 16px 32px;
-    background: linear-gradient(#ffb000, #f2a50c);
-    border-radius: 4px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.10);
-    text-transform: uppercase;
-    color: #332200;
-    font-size: 18px;
-    line-height: 1.33;
-    font-family: 'Poppins';
-    font-weight: 600;
-}
-
-.introducao a:hover {
-    background: linear-gradient(#ffb60d, #e59317);
-}
-
-@media (max-width: 600px) {
-    .introducao a {
-        padding: 12px 16px;
-        font-size: 16px;
-    }
-}
-
-@media (max-width: 1200px) {
-    .introducao h1 {
-        font-size: 48px;
-    }
-    .introducao p {
-        font-size: 18px;
-    }
-}
-
-@media (max-width: 800px) {
-    .introducao-bg {
-        background: #111;
-        padding-top: 40px;
-        box-shadow: inset 0 -60px #fff;
-    }
-    .introducao {
-        grid-template-columns: 1fr;
-        gap: 32px;
-    }
-
-    .introducao-conteudo {
-        padding-bottom: 0px;
-    }
-    .introducao h1 {
-        font-size: 32px;
-        margin-bottom: 16px;
-    }
-
-    .introducao-img {
-        height: 300px;
-        width: 100%;
-    }
-}
+/* Home */
+@import url(/home/introducao.css);
