--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url(/global/header.css);
 @import url(/global/global.css);
+@import url(/utilidades/tipografia.css);
+@import url(/utilidades/cores.css);
 
 /* Utilidades */
 @import url(/utilidades/componentes.css);
