--- a/global/header.css
+++ b/global/header.css
@@ -1,5 +1,5 @@
 .header-bg {
-    background-color: #000;
+    background-color: var(--cor-12);
 }
 
 .header {
@@ -36,7 +36,7 @@
     display: block;
     height: 2px;
     width: 0px;
-    background: #fff;
+    background: var(--cor-0);
     margin-top: 4px;
     position: absolute;
 }
@@ -51,13 +51,13 @@
         gap: 20px;
     }
     .header-menu a {
-        background: #111;
+        background: var(--cor-11);
         padding: 12px 16px;
         border-radius: 5px;
     }
 
     .header-menu a:hover {
-        background-color: #2e2e2e;
+        background-color: var(--cor-10);
     }
 
     .header a:after {
