--- a/home/introducao.css
+++ b/home/introducao.css
@@ -1,5 +1,5 @@
 .introducao-bg {
-    background: #000;
+    background: var(--cor-12);
     color: #fff;
     box-shadow: inset 0 -20px #fff;
 }
@@ -29,19 +29,10 @@
 
 .introducao h1 {
     margin-bottom: 32px;
-    font-size: 64px;
-    line-height: 1.125;
-    font-family: 'Poppins';
-    font-weight: 600;
 }
 
 .introducao p {
     margin-bottom: 20px;
-    font-size: 24px;
-    line-height: 1.5;
-    color: #b2b2b2;
-    font-family: 'Roboto';
-    font-weight: 400;
 }
 
 .introducao h1 span {
