--- a/global/global.css
+++ b/global/global.css
@@ -5,6 +5,9 @@ body {
 }
 
 h1, 
+h2,
+h3,
+h4,
 ul,
 p {
     margin: 0px;
@@ -22,4 +25,8 @@ a {
 img {
     max-width: 100%;
     display: block;
+}
+
+img[src$=".jpg"] {
+    border-radius: 4px;
 }
