--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -21,6 +21,12 @@
     margin-left: auto;
     margin-right: auto;
     overflow-x: auto;
+    overflow-x: auto;
+}
+
+.bicicletas-lista li {
+    flex: 1;
+    min-width: 280px;
 }
 
 .bicicletas-lista a {
@@ -46,8 +52,21 @@
     background-color: var(--cor-p1);
     transition: width 0.2s;
 }
+
+.bicicletas-lista a:hover h3::before {
+    width: 24px;
+}
   
 .bicicletas-lista li span {
     padding-left: 20px;
 }
-  
+
+@media (max-width: 800px) {
+    .bicicletas-lista {
+        padding-bottom:60px;
+    }
+
+    .bicicletas-lista ul {
+        gap: 20px;
+    }
+}
