--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 /* Home */
 @import url(/home/introducao.css);
+@import url(/home/tecnologia.css);
 
 /* Bicicletas*/
 @import url(/css/bicicletas/bicicletas-lista.css);
