--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 /* Home */
 @import url(/home/introducao.css);
 @import url(/home/tecnologia.css);
+@import url(/home/parceiros.css);
 
 /* Bicicletas*/
 @import url(/css/bicicletas/bicicletas-lista.css);
