--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
 @import url(/home/introducao.css);
 @import url(/home/tecnologia.css);
 @import url(/home/parceiros.css);
+@import url(/home/depoimento.css);
 
 /* Bicicletas*/
 @import url(/css/bicicletas/bicicletas-lista.css);
