--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url(/global/global.css);
 @import url(/utilidades/tipografia.css);
 @import url(/utilidades/cores.css);
+@import url(/global/footer.css);
 
 /* Utilidades */
 @import url(/utilidades/componentes.css);
