--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 /* Bicicletas*/
 @import url(/css/bicicletas/bicicletas-lista.css);
 @import url(/css/bicicletas/bicicletas.css);
+@import url(/css/bicicleta/bicicleta.css);
 
 /* Seguros*/
 @import url(/seguros/seguros.css);
