--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 @import url(/css/bicicletas/bicicletas-lista.css);
 @import url(/css/bicicletas/bicicletas.css);
 @import url(/css/bicicleta/bicicleta.css);
+@import url(/css/bicicleta/seguro.css);
 
 /* Seguros*/
 @import url(/seguros/seguros.css);
