--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
 
 /* Utilidades */
 @import url(/utilidades/componentes.css);
+@import url(/utilidades/contato.css);
+@import url(/utilidades/formulario.css);
 
 /* Home */
 @import url(/home/introducao.css);
