--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(/utilidades/tipografia.css);
 @import url(/utilidades/cores.css);
 @import url(/global/footer.css);
+@import url(/utilidades/animacao.css);
 
 /* Utilidades */
 @import url(/utilidades/componentes.css);
